# autocurricula

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
autocurricula/: commands.py  engine.py  handlers.py  intellisense.py  models.py  progress.py  runner.py  server.py  session.py  session_handler.py  test_parsing.py  workspace.py
autocurricula/static/: index.html  style.css
autocurricula/static/js/: editor.js  handlers.js  landing.js  main.js  markdown.js  problem.js  state.js  ui.js  websocket.js
docs/: index.html
